--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --canvas-width: 960px;
   --square-width: 10px;
+  --square-color: rgb(194, 95, 95);
 }
 
 html {
@@ -23,10 +24,10 @@ html {
 .square {
   width: var(--square-width);
   height: var(--square-width);
-  background-color: red;
+  background-color: white;
   border: 0.1px solid black;
 }
 
 .draw {
-  background-color: blue;
+  background-color: var(--square-color);
 }
